force-app/main/default/objects/Dummy09__c/Dummy09__c.object-meta.xml
<CustomObject>
    <label>Dummy09</label>
    <nameField>
        <label>Dummy09 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy09</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>