force-app/main/default/objects/Dummy09__c/fields/FooBar026__c.field-meta.xml
<CustomField>
    <fullName>FooBar026__c</fullName>
    <label>FooBar026</label>
    <length>255</length>
    <type>Text</type>
</CustomField>