force-app/main/default/objects/Dummy09__c/fields/FooBar106__c.field-meta.xml
<CustomField>
    <fullName>FooBar106__c</fullName>
    <label>FooBar106</label>
    <length>255</length>
    <type>Text</type>
</CustomField>