force-app/main/default/objects/Dummy09__c/fields/FooBar157__c.field-meta.xml
<CustomField>
    <fullName>FooBar157__c</fullName>
    <label>FooBar157</label>
    <length>255</length>
    <type>Text</type>
</CustomField>